<resources>
    <string name="app_name">HuaiFang</string>
    <string name="hf_submit">submit</string>
    <string name="facing_bottom_tab_0">首页</string>
    <string name="facing_bottom_tab_1">消息</string>
    <string name="facing_bottom_tab_2">发现</string>
    <string name="facing_bottom_tab_3">我</string>
    <string name="facing_index_questionnaire">调查问卷</string>
    <string name="facing_index_functions">常用功能</string>
    <string name="facing_index_fun_announcement">通知公告</string>
    <string name="facing_index_fun_bazaar">社区集市</string>
    <string name="facing_index_fun_guide">办事指南</string>
    <string name="facing_index_fun_village">村务公开</string>
    <string name="facing_index_fun_live">居务公开</string>
    <string name="facing_index_fun_yellow_book">迷你黄页</string>
    <string name="facing_index_fun_party">社区党建</string>
    <string name="facing_index_fun_library">社区图书馆</string>
    <string name="facing_index_fun_dispute">纠纷调解</string>
    <string name="facing_index_friend">可能认识的人</string>
    <string name="facing_index_friend_add">+加为好友</string>
    <string name="facing_list_search_friend">搜索我的好友，发起聊天</string>
    <string name="facing_discovery_action">社区活动</string>
    <string name="facing_discovery_around">周边</string>
    <string name="facing_discovery_forum">社区论坛</string>
    <string name="facing_discovery_neighborhood">邻里圈</string>
    <string name="facing_mine_friend">我的好友</string>
    <string name="facing_mine_room">我的信息</string>
    <string name="facing_mine_company">我的企业</string>
    <string name="facing_mine_party_member">我是党员</string>
    <string name="facing_mine_label">我的标签</string>
    <string name="facing_mine_suggestion">意见箱</string>
    <string name="facing_mine_setting">设置</string>
    <string name="facing_mine_logout">退出登录</string>
    <string name="default_tip">提示</string>
    <string name="default_cancel">取消</string>
    <string name="default_ok">确定</string>
    <string name="default_next_step">下一步</string>
    <string name="default_into_app">进入智慧槐房</string>
    <string name="default_password">密码</string>
    <string name="default_telephone">手机号码</string>
    <string name="login_pwd_input_hint">请入6～20位密码</string>
    <string name="login_phone_input_hint">请输入手机号码</string>
    <string name="login_reg_phone_title">新用户注册</string>
    <string name="login_reg_pwd_title">新用户注册</string>
    <string name="login_register_button">立即注册</string>
    <string name="default_login">登录</string>
    <string name="fun_guide_communicate">立即沟通</string>
    <string name="fun_guide_tel">拨打电话</string>
    <string name="default_all">全部</string>
    <string name="default_dot">.</string>
    <string name="default_submit">提交</string>
    <string name="dispute_mediator_list_item_name_pre">调解人：</string>
    <string name="dispute_mediator_list_item_location_pre">调解地点：</string>
    <string name="dispute_mediator_list_item_communicate">立即沟通</string>
    <string name="dispute_mediator_list_item_tel">拨打电话</string>
    <string name="function_party_act_join">立即参加</string>
    <string name="function_party_members_detail_flag">党员标识</string>
    <string name="function_party_members_detail_tag">党员标签</string>
    <string name="function_party_members_detail_msg">发送消息</string>
    <string name="function_party_members_detail_friend">加为好友</string>
    <string name="default_mine">我</string>
    <string name="default_admin">管理员</string>
    <string name="default_download">下载</string>
</resources>
