<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <FrameLayout
        android:id="@+id/fl_login_phone_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/default_telephone"
            android:textColor="@color/colorDark" />

        <EditText
            android:id="@+id/et_login_phone_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_phone_input_hint"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingLeft="70dp"
            android:textColor="@color/colorDark"
            android:textSize="14sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_login_pwd_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/default_password"
            android:textColor="@color/colorDark" />

        <EditText
            android:id="@+id/et_login_pwd_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_pwd_input_hint"
            android:inputType="textPassword"
            android:paddingLeft="50dp"
            android:textColor="@color/colorDark"
            android:textSize="14sp" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_login_pwd_next"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_tip_dialog_ok"
        android:gravity="center"
        android:text="@string/default_next_step"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_login_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="20dp"
        android:text="@string/login_register_button"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:visibility="gone" />
</LinearLayout>