<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_launcher" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_login_border"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fl_login_phone_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_login_person" />

            <EditText
                android:id="@+id/et_login_phone_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/login_phone_input_hint"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingLeft="30dp"
                android:textColor="@color/colorDark"
                android:textSize="14sp" />
        </FrameLayout>

        <include layout="@layout/function_line_item" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_login_pwd_lock" />

            <EditText
                android:id="@+id/et_login_pwd_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/login_pwd_input_hint"
                android:inputType="textPassword"
                android:paddingLeft="30dp"
                android:textColor="@color/colorDark"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center_vertical|right"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:src="@mipmap/ic_login_pwd_eyes"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_login_next"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_tip_dialog_ok"
        android:gravity="center"
        android:text="@string/default_next_step"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_login_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/login_register_button"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:visibility="visible" />

        <include layout="@layout/login_copy_right_item" />
    </LinearLayout>
</LinearLayout>