<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/shape_border_black"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_dispute_mediator_list_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:lines="1"
        android:maxLines="1"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.topie.huaifang.imageloader.HFImageView
            android:id="@+id/iv_dispute_mediator_list_item_head"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:src="@mipmap/ic_function_party_members_head"
            app:defImageRes="@mipmap/ic_function_party_members_head" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/dispute_mediator_list_item_name_pre"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_dispute_mediator_list_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.topie.huaifang.imageloader.HFImageView
            android:id="@+id/iv_dispute_mediator_list_item_location"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:src="@mipmap/ic_function_dispute_mediator_location"
            app:defImageRes="@mipmap/ic_function_dispute_mediator_location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/dispute_mediator_list_item_location_pre"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_dispute_mediator_list_item_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_dispute_mediator_list_item_comm"
            style="@style/item_selected_material"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/ic_function_guide_communicate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/dispute_mediator_list_item_communicate"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/colorBlack" />

        <LinearLayout
            android:id="@+id/ll_dispute_mediator_list_item_tel"
            style="@style/item_selected_material"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/ic_function_guide_tel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:ellipsize="end"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/dispute_mediator_list_item_tel"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>