<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/function_thick_line_item" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <com.topie.huaifang.imageloader.HFImageView
            android:id="@+id/iv_fun_party_members_detail"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:src="@mipmap/ic_function_party_members_head"
            app:defImageRes="@mipmap/ic_function_party_members_head" />

        <TextView
            android:id="@+id/tv_fun_party_members_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/iv_fun_party_members_detail"
            android:layout_toEndOf="@id/iv_fun_party_members_detail"
            android:layout_toRightOf="@id/iv_fun_party_members_detail"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/colorDark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_fun_party_members_detail_node"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_fun_party_members_detail_name"
            android:layout_toEndOf="@id/iv_fun_party_members_detail"
            android:layout_toRightOf="@id/iv_fun_party_members_detail"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/colorGray"
            android:textSize="12sp" />
    </RelativeLayout>

    <include layout="@layout/function_thick_line_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:minWidth="70dp"
            android:text="@string/function_party_members_detail_flag"
            android:textColor="@color/colorDark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_fun_party_members_detail_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/colorDark"
            android:textSize="12sp" />
    </LinearLayout>


    <include layout="@layout/function_line_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:minWidth="70dp"
            android:textColor="@color/colorDark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_fun_party_members_detail_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/colorDark"
            android:textSize="12sp" />
    </LinearLayout>

    <include layout="@layout/function_thick_line_item" />

    <LinearLayout
        android:id="@+id/ll_fun_party_members_detail_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorLightGray"
        android:gravity="bottom"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_fun_party_members_detail_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_fun_party_members_msg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/function_party_members_detail_msg"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_fun_party_members_detail_friend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_fun_party_act_publish"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/function_party_members_detail_friend"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>